# asimov-x-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
src/: jq.rs  lib.rs
src/api/: mod.rs  types.rs  x.rs
src/cataloger/: main.rs
src/jq/: x_list.jq
src/providers/: mod.rs  provider.rs  x.rs
tests/: api_tests.rs  jq_tests.rs
